# consolidAcao

./: .gitignore  components.d.ts  package-lock.json  package.json  tsconfig.json  v-money3.d.ts  vite.config.ts  windi.config.ts
.github/workflows/: main.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: broker.rs  brokerage_note.rs  brokers.rs  commons.rs  config.rs  database.rs  main.rs
src-tauri/src/brokerage_note/: db.rs  types.rs
src-tauri/src/commons/: page.rs
src/assets/scss/: buttons.scss  card.scss  fonts.scss  forms.scss  tooltip.scss
src/components/: Button.vue  GlobalLoader.vue  HeaderSlot.vue  Table.vue  ValidateEach.vue
src/components/brokerage/brokerage-form/: BrokerageNoteForm.vue  orders.composable.ts
src/composables/: brokers.ts  pageable.ts
src/config/: config-file.ts  filters.ts  money.ts  router.ts  styles.ts
src/directives/: tooltip.ts
src/layouts/: MenuLayout.vue
src/pages/: Brokers.vue  Home.vue  Welcome.vue  brokerage.vue  brokers.vue  config.vue  configs.vue  home.vue  index.vue
src/pages/Brokarage/: BrokerageList.vue
src/pages/brokerage/: list.vue  new.vue
src/pages/brokerage/edit/: [id].vue
src/pages/brokerage/edit/composables/: note.ts
src/pages/brokerage/new/: index.vue
src/pages/brokerage/new/composables/: broker.ts  note.ts  orders.ts
src/pages/brokerage/view/: [id].vue
src/store/: brokerage.store.ts  config.store.ts  global-loader.ts  menu.store.ts  menu.ts
src/tauri/: brokerage.ts  brokers.ts  config-file.ts  config.ts
src/types/: table.ts
