[package]
name = "consolidacao"
version = "0.1.0"
description = "ConsolidAção"
authors = [ "you" ]
license = ""
repository = ""
default-run = "consolidacao"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
rusqlite = { version = "0.25.3", features = [ "bundled", "chrono" ] }
libsqlite3-sys = "0.22.2"
chrono = { version = "0.4.19", features = [ "serde" ] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
